# liquid-glass

./: .gitignore  LICENSE  Makefile  README.md  backdrop_refraction.c  backdrop_refraction.h  liquid_glass.desktop  liquid_glass_gtk.c
kwin-native-effect/: CMakeLists.txt
kwin-native-effect/package/: liquidglassnative.json
kwin-native-effect/shaders/: liquidglass.frag
kwin-native-effect/src/: liquid_glass_native_effect.cpp  liquid_glass_native_effect.h
xfwm4-native-effect/: liquidglass-xfwm4.patch
